--- a/app/public/index.html
+++ b/app/public/index.html
@@ -34,7 +34,8 @@
                 <div class="inline-flex">
                     <template v-for="cate in categories">
                         <label class="mr-4">
-                            <input type="checkbox" class="mr-2" name="category" :value="cate.text" v-model="form.categories">{{cate.text}}
+                            <input type="checkbox" class="mr-2" name="category" :value="cate.text"
+                                   v-model="form.categories">{{cate.text}}
                         </label>
                     </template>
                 </div>
@@ -49,15 +50,13 @@
 
             <div class="mb-4">
                 <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="button">
+                        type="button" @click="doSearch">
                     搜索
                 </button>
             </div>
         </form>
     </div>
 
-
-    <!-- 下面部分 - 检索信息结果列表 -->
     <div class="container mx-auto">
         <table class="min-w-full">
             <thead>
@@ -71,16 +70,16 @@
             </tr>
             </thead>
             <tbody class="text-center">
-            <!-- Placeholder for test data -->
-            <tr>
-                <td class="border px-4 py-2">1</td>
-                <td class="border px-4 py-2">John Doe</td>
-                <td class="border px-4 py-2">Sample Title</td>
-                <td class="border px-4 py-2">1000</td>
-                <td class="border px-4 py-2">Sample Keyword</td>
-                <td class="border px-4 py-2">2024-04-09</td>
-            </tr>
-            <!-- Add more rows here for additional test data -->
+            <template v-for="video in videos">
+                <tr>
+                    <td class="border px-4 py-2">{{video.Id}}</td>
+                    <td class="border px-4 py-2">{{video.Author}}</td>
+                    <td class="border px-4 py-2">{{video.Title}}</td>
+                    <td class="border px-4 py-2">{{video.View}}</td>
+                    <td class="border px-4 py-2">{{video.Keywords.join(',')}}</td>
+                    <td class="border px-4 py-2">{{dateFormat(video.PostAt)}}</td>
+                </tr>
+            </template>
             </tbody>
         </table>
     </div>
